--- a/package.json
+++ b/package.json
@@ -89,6 +89,10 @@
         "sass-loader": "^6.0.6",
         "speed-measure-webpack-plugin": "^1.2.3",
         "style-loader": "^0.19.1",
+        "vue": "^2.6.10",
+        "vue-loader": "^15.7.0",
+        "vue-style-loader": "^4.1.2",
+        "vue-template-compiler": "^2.6.10",
         "webpack": "^3.10.0",
         "webpack-dev-server": "^2.11.3",
         "webpack-visualizer-plugin": "^0.1.11"
