--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "tiffany-code-repo",
+    "name": "General-code-repo",
     "version": "1.0.0",
     "description": "Starter Kit with HBS, Assemble, Webpack ",
     "scripts": {
